--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   </div>
 
-  <script type="module" src="js/app.js"></script>
+  <script type="module" src="js/auth.js"></script>
 
 </body>
 </html>
