--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
     <button id="loginBtn">Login</button>
 
-    <p>New user? <span id="signupBtn">Create Account</span></p>
-
+      <p>New user? <span id="signupBtn" style="color:cyan; cursor:pointer;">Create Account</span></p>
   </div>
 
   <script type="module" src="js/auth.js"></script>
