--- a/dashboard.html
+++ b/dashboard.html
@@ -211,7 +211,11 @@ body::before {
 </a>
 
 </div>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
+<script src="js/firebase-config.js"></script>
 </div>
 
 </body>
