--- a/weakness.html
+++ b/weakness.html
@@ -275,5 +275,6 @@ h2 {
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
 <script src="js/firebase-config.js"></script>
+  <script src="js/weakness.js"></script>
 </body>
 </html>
