--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ body::before {
     <!-- Toggle -->
     <div class="toggle-container">
       <span class="toggle-text active" id="loginText">Login</span>
-      <div class="toggle-switch" id="modeToggle"></div>
+      <button id="modeToggle" type="button" class="toggle-switch"></button>
       <span class="toggle-text" id="signupText">Create Account</span>
     </div>
 
