--- a/index.html
+++ b/index.html
@@ -232,7 +232,11 @@ body::before {
 </style>
 
 </head>
-
+<script>
+document.getElementById("modeToggle").onclick = function(){
+  console.log("Toggle clicked");
+};
+</script>
 <body>
 
 <!-- Background Orbs -->
